VIS-19: improve text handling, add tooltip, fix vertical text alignment, add background-color

--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -1,20 +1,25 @@
 .cropped-image-container {
 
-  .base-image {
+  .background-rect {
     position: absolute;
     z-index: 1;
   }
 
-  .variable-image {
+  .base-image {
     position: absolute;
     z-index: 2;
+  }
+
+  .variable-image {
+    position: absolute;
+    z-index: 3;
   }
 
   .text-container {
     position: absolute;
 
     .text-overlay {
-      z-index: 3;
+      z-index: 4;
       position: absolute;
     }
   }
